--- a/dvn-app/trunk/src/DVN-web/web/resources/css/iefix.css
+++ b/dvn-app/trunk/src/DVN-web/web/resources/css/iefix.css
@@ -5,7 +5,7 @@
 .dvn_content{display:inline-block;position:relative;margin-right:-724px}
 */
 .dvn_content form {margin:0;padding:0;}
-.dvn_content fieldset{padding:.75em}
+.dvn_content fieldset{padding:0;}
 .iceOutConStat{position:absolute}
 .vdcTooltip{width:16em}
 .dvnHmpgGroupTableWrap{width:100%}
